--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </p>
       </div>
       <div class="container hero__image">
-        <img src="hero.png" alt="Hero graphic" />
+        <img src="assets/hero.png" alt="Hero graphic" />
       </div>
     </section>
 
@@ -291,7 +291,11 @@
         <div class="section__label">What we offer</div>
         <h2 class="heading heading--l">The Podcast</h2>
         <div class="podcast">
-          <img src="podcast.png" alt="Podcast artwork" class="podcast__img" />
+          <img
+            src="assets/podcast.png"
+            alt="Podcast artwork"
+            class="podcast__img"
+          />
           <div class="podcast__content">
             <p class="text text--md">Conversations that make you feel seen</p>
             <p class="text">
