emotional intelligence section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,93 @@
         </div>
       </section>
 
+      <!-- ================= What is EI (A/B variants) ================= -->
+      <section id="what-is-ei" class="section section--cream">
+        <div class="container">
+          <!-- Variants: JavaScript will toggle which one is visible -->
+          <div class="ab-variant" data-variant="A">
+            <h2 class="title-xl center">What is Emotional Intelligence?</h2>
+            <div class="grid grid--2 grid--center">
+              <div>
+                <p>
+                  Emotional intelligence (EI) is the skill of recognising,
+                  understanding, and managing emotions—your own and others'. It
+                  combines self-awareness, self-regulation, empathy and social
+                  skills.
+                </p>
+                <p>
+                  Strengthening EI helps you make clearer decisions, reduce
+                  stress, and build more resilient relationships. These are
+                  learnable skills rather than fixed traits.
+                </p>
+                <ul class="bullets">
+                  <li>
+                    Notice emotions earlier so you can choose your response
+                  </li>
+                  <li>Reduce reactivity and recover faster from stress</li>
+                  <li>Communicate with clarity and compassion</li>
+                </ul>
+              </div>
+
+              <div>
+                <div class="panel">
+                  <h3 class="h5">Practical benefits</h3>
+                  <ul class="bullets">
+                    <li>Lead better at work</li>
+                    <li>Connect more at home</li>
+                    <li>Make calmer decisions in the moment</li>
+                  </ul>
+                  <p class="center" style="margin-top: 12px">
+                    <a class="btn btn--primary" href="#newsletter"
+                      >Get practical tools</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="ab-variant" data-variant="B">
+            <h2 class="title-xl center">Why EI matters</h2>
+            <div class="grid grid--2 grid--center">
+              <div>
+                <p>
+                  Emotions shape every choice we make. EI teaches you to read
+                  those signals and act with intention — improving focus,
+                  relationships and well-being.
+                </p>
+                <p>
+                  Short, practical practices help you notice triggers, calm your
+                  nervous system, and speak clearly under pressure.
+                </p>
+                <ul class="bullets">
+                  <li>Quick daily checks to increase self-awareness</li>
+                  <li>Micro-tools to calm and re-orient during stress</li>
+                  <li>
+                    Language templates to stay clear in hard conversations
+                  </li>
+                </ul>
+              </div>
+
+              <div>
+                <div class="panel">
+                  <h3 class="h5">Try this</h3>
+                  <p>
+                    Pause for 30 seconds when you notice a strong emotion. Name
+                    it out loud. Breathe. Then choose one next step.
+                  </p>
+                  <p class="center" style="margin-top: 12px">
+                    <a class="btn btn--primary" href="#newsletter"
+                      >Try a short guide</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Cream band per Figma “Rectangle 35/16” -->
       <div class="band band--cream"></div>
 
